--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.11.0",
+    "socket.io-client": "^4.7.5",
     "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
