--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.11.0",
+    "recharts": "^3.7.0",
     "socket": "^1.1.52",
     "socket.io-client": "^4.8.3",
     "sweetalert2": "^11.26.17",
