--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.89.0",
     "@tailwindcss/vite": "^4.1.18",
+    "axios": "^1.13.5",
     "framer-motion": "^12.23.26",
     "html2canvas": "^1.4.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.562.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
